--- a/WebcamObjectRecognition/WebcamObjectRecognition.csproj
+++ b/WebcamObjectRecognition/WebcamObjectRecognition.csproj
@@ -1,19 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
-
   <ItemGroup>
+    <PackageReference Include="IronPython" Version="3.4.2" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
-    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="3.0.0" />
-    <PackageReference Include="Microsoft.ML.Vision" Version="3.0.0" />
-    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
+    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="4.0.2" />
+    <PackageReference Include="Microsoft.ML.Vision" Version="4.0.2" />
     <PackageReference Include="OpenCvSharp4.Windows" Version="4.10.0" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0" />
+    <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.10.0" />
+    <PackageReference Include="SharpZipLib" Version="1.4.2" />
   </ItemGroup>
-
 </Project>
