--- a/WebcamObjectRecognition/WebcamObjectRecognition.csproj
+++ b/WebcamObjectRecognition/WebcamObjectRecognition.csproj
@@ -12,7 +12,10 @@
     <PackageReference Include="Microsoft.ML.Vision" Version="5.0.0-preview.1.25127.4" />
     <PackageReference Include="OpenCvSharp4.Windows" Version="4.10.0.20241108" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
-    <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.16.0" />
+    <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.3.1" />
     <PackageReference Include="SharpZipLib" Version="1.4.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ImageClassification.Train\ImageClassification.Train.csproj" />
   </ItemGroup>
 </Project>
